--- a/Bagian A/Tugas Besar 1 Bagian A.ipynb
+++ b/Bagian A/Tugas Besar 1 Bagian A.ipynb
@@ -5,7 +5,15 @@
    "metadata": {},
    "source": [
     "## <center>Tugas Besar 1 Bagian A</center>\n",
-    "####  <center>Eksplorasi <i>library <strong>Decision Tree Learning</strong></i> pada <i>Jupyter Notebook</i></center>"
+    "####  <center>Eksplorasi <i>library <strong>Decision Tree Learning</strong></i> pada <i>Jupyter Notebook</i></center>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<center>Oleh : </center>\n",
+    "<center>1. Pandyaka Aptanagi / 13517003</center>\n",
+    "<center>2. I Putu Gede Wirasuta / 13517015</center>\n",
+    "<center>3. M. Rifky I. Bariansyah / 13517081</center>\n",
+    "<center>4. Gardahadi / 13517144</center>"
    ]
   },
   {
@@ -19,12 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. Membaca dataset <i>iris</i> dan dataset <i>play-tennis</i>"
+    "#### a. Membaca dataset <i>iris</i> dan dataset <i>play-tennis</i>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b. Melakukan pembelajaran <i>Decision Tree Learning</i> dengan <i>Decision Tree Classifier</i> dan <i>Id3Estimator</i>"
+    "##### b. Melakukan pembelajaran <i>Decision Tree Learning</i> dengan <i>Decision Tree Classifier</i> dan <i>Id3Estimator</i>"
    ]
   },
   {
@@ -72,8 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -189,9 +199,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outlook</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    outlook  temp  humidity  wind\n",
+       "0         2     1         0     1\n",
+       "1         2     1         0     0\n",
+       "2         0     1         0     1\n",
+       "3         1     2         0     1\n",
+       "4         1     0         1     1\n",
+       "5         1     0         1     0\n",
+       "6         0     0         1     0\n",
+       "7         2     2         0     1\n",
+       "8         2     0         1     1\n",
+       "9         1     2         1     1\n",
+       "10        2     2         1     0\n",
+       "11        0     2         0     0\n",
+       "12        0     1         1     1\n",
+       "13        1     2         0     0"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Buat data dan target terlebih dahulu\n",
     "playtennis_data = playtennis_dataframe.drop(\"day\",axis=1).drop(\"play\",axis=1)\n",
@@ -199,12 +362,13 @@
     "\n",
     "## Encoding untuk data kategorikal\n",
     "enc = preprocessing.LabelEncoder()\n",
-    "playtennis_data = playtennis_data.apply(enc.fit_transform)"
+    "playtennis_data = playtennis_data.apply(enc.fit_transform)\n",
+    "playtennis_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +461,7 @@
     "print(export_text_id3(id3_playtennis.tree_, feature_names=playtennis_feature_names))\n",
     "\n",
     "### Export model pohon dengan export_graphviz sehingga menjadi file .dot\n",
-    "# id3_playtennis_tree = export_graphviz(id3_playtennis.tree_, 'id3_tree.dot', playtennis_feature_names)\n",
+    "id3_playtennis_tree = export_graphviz(id3_playtennis.tree_, 'id3_tree.dot', playtennis_feature_names)\n",
     "\n",
     "### Ubah file .dot menjadi .pdf dengan menggunakan graphviz\n",
     "# dot -Tpdf id3_tree.dot -o tree.pdf"
@@ -308,6 +472,118 @@
    "metadata": {},
    "source": [
     "<img src=\"playtennis_id3.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Melakukan analisis persamaan dan perbedaan <i>library<i> dengan referensi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a. Penentuan Atribut Terbaik"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b. Penanganan label dari cabang setiap nilai atribut\n",
+    "Setelah Classifier telah berhasil menentukan atribut terbaik, langkah selanjutnya adalah untuk menangani label yang diberi untuk setiap nilai dari atribut tersebut. Misal atribut terbaik adalah Weather, weather memiliki 3 nilai yaitu Sunny, Warm, dan Cold. Pada bagian ini akan dibahas mengenai cara algoritma menentukan label apa yang harus diberikan untuk setiap nilai atribut tersebut"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### b.1 Persamaan Id3 dan DecisionTreeClassifier\n",
+    "\n",
+    "Baik id3 yang dijelaskan di buku Tom Mitchell maupun DecisionTreeClassifier pada kakas Scikit melakukan penanganan label dengan cara melakukan iterasi untuk setiap nilai atribut dan menjadikannya cabang pada tree.Setiap cabang akan dievaluisi apakah dia dapat langsung diberi label target atau harus menjadi node baru dengan mengambil suatu nilai atribut yang terbaik lagi pada saat itu. Pada id3 dan DecisionTreeClassifier, apabila suatu nilai atribut hanya memiliki satu label kelas target yang berkorespondensi maka langsung akan menjadi terminal node dengan label tersebut\n",
+    "\n",
+    "##### b.2 Perbedaan Id3 dan DecisionTreeClassifier\n",
+    "\n",
+    "Pada Id3, untuk penentuan atribut terbaik selanjutnya digunakan perhitungan reduksi entropi tertinggi sedangkan pada library decision tree digunakan metode perhitungan impuritas terendah. Impuritas tersebut dapat ditentukan cara perhitungannya oleh pengguna baik menggunakan entropi maupun gini"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### c. Penentuan label jika examples kosong di cabang tersebut\n",
+    "Setelah memilih suatu atribut yang terbaik, maka akan dicari atribut yang terbaik untuk nilai atribut tersebut. Pada bagian ini akan membahas bagaimana menentukan label jika examples untuk atribut tersebut kosong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### c.1 Persamaan Id3 referensi, library DecisionTreeClassifier dan library Id3\n",
+    "\n",
+    "Penanganan untuk labelling ketika example kosong di suatu cabang adalah dengan melihat nilai atribut target pada example yang ada.\n",
+    "\n",
+    "Untuk Id3 referensi dan Id3 library, jika example kosong maka akan sebelum branch baru akan ditambahkan sebuah daun dengan label yaitu most common value pada label yang ada pada examples\n",
+    "\n",
+    "##### c.2 Perbedaan Id3 referensi, library DecisionTreeClassifier dan library Id3\n",
+    "\n",
+    "Dibandingkan dengan Id3 referensi dan Id3 library yang akan memberi label pada sebuah daun dengan most common value pada label yang ada pada examples, untuk DecisionTreeClassifier akan <strong>menghilangkan atribut</strong> tersebut pada pohon yang dibentuk "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### d. Penanganan atribut kontinu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e. Penanganan atribut dengan <i>missing values</i>\n",
+    "Salah satu permasalahan pada proses learning adalah adanya nilai-nilai atribut yang tidak terdifinisi atau \"missing\". Pada bagian ini akan dilakukan analisis bagaimana kedua algoritma menangani permasalahn tersebut"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### e.1 Persamaan Id3 dan DecisionTreeClassifier\n",
+    "\n",
+    "Baik id3 yang dijelaskan di buku Tom Mitchell maupun DecisionTreeClassifier pada kakas Scikit melakukan penanganan missing values dengan melihat values-values yang ada pada dataset.  \n",
+    "\n",
+    "##### e.2 Perbedaan Id3 dan DecisionTreeClassifier\n",
+    "\n",
+    "DecisionTreeClassifier hanya dapat menerima data yang tidak memiliki missing values sehingga perlu dilakukan tahap preprocessing untuk melakukan proses imputasi. Imputasi tersebut dapat dilakukan dengn berbagai cara salah satunya dengan menggunakan library sklearn.preprocessing.SimpleImputer yang dapat melakukan imputasi berdasarkan 4 strategi yaaitu rata-rata, modus, konstan, atau median.\n",
+    "\n",
+    "Pada Id3 yang dijelaskan dalam buku Tom Mitchell, terdapat dua strategi untuk menangani missing values. Pertama adalah untuk mengassign nilai missing dengan nilai yang paling umum pada node yang sekarang sedang ditinjau. Kedua adalah dengan menghitung probabilitas nilai yang mungkin untuk atribut tersebut berdasarkan nilai-nilai yang ada\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### f. <i>Pruning</i> dan parameter <i>confidence</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### f.1 Persamaan Id3 referensi, library DecisionTreeClassifier dan library Id3\n",
+    "\n",
+    "Digunakan untuk mengatasi permasalahan overfitting data. Dilakukan dengan meng-iterasi semua node yang ada pada tree, sehingga termasuk dalam metode prune post-pruned.\n",
+    "\n",
+    "##### f.2 Perbedaan Id3 referensi, library DecisionTreeClassifier dan library Id3\n",
+    "\n",
+    "Pada Id3 referensi, tidak dijelaskan secara spesifik bagaimana cara melakukan pruning, tetapi dijelaskan lebih lanjut di halaman 69 tentang <i>reduced error pruning</i> (sebenarnya masih ada satu lagi yaitu <i>rule-post pruning</i>, tetapi pruning ini digunakan pada C4.5 di mana merupakan versi <i>upgrade</i> dari ID3). <i>Reduced error pruning</i> melakukan pruning dengan cara menghilangkan suatu subtree yang ada pada node tersebut, menjadikannya leaf node dan di-<i>assign</i> dengan <i>most common classification</i> yang terkait dengan node tersebut. Node akan dihilangkan secara iteratif sampai pruning ini membahayakan(contoh : mengurangi akurasi dari pohon terhadap validation set)\n",
+    "\n",
+    "Pada library DecisionTreeClassifier, pruning dilakukan dengan menggunakan <i><strong>Minimal Cost-Complexity Pruning</strong></i>. <i><strong>Minimal Cost-Complexity Pruning</strong></i> merupakan pruning yang memiliki parameter nilai <strong>alpha</strong> atau lebih dikenal sebagai complexity parameter yang akan digunakan untuk mendefinisikan <i>cost-complexity measure</i> dengan rumus = <img src=\"dtl_pruning.png\"> Untuk mencari nilai dari cost complexity, digunakan rumus =<img src=\"dtl_pruning2.png\"> Nilai dari cost complexity dari sebuah node dan branch-nya dapat bernilai sama bergantung pada nilai dari alpha. Oleh karena itu, didapatkan definisi dari alpha effective adalah sebagai berikut = <img src=\"dtl_pruning3.png\"> Sebuah non-terminal node dengan nilai alpha effective terkecil akan di-prune. Proses ini akan berlangsung terus menerus sampai nilai minimal alpha effective dari tree ini lebih besar dibandingkan dengan alpha.\n",
+    "\n",
+    "Pada library Id3, pruning dilakukan dengan terlebih dahulu membagi dua dataset, yaitu sebagai data test dan sebagai data training. Data training akan digunakan untuk membuat pohon, dan data test akan digunakan untuk melakukan validasi terhadap pohon yang telah dibentuk sebelumnya. Hasil validasi tersebut akan dimasukkan sebagai nilai prediksi untuk setiap nodenya. Setelah melakukan validasi, maka proses pruning akan dimulai, yaitu dengan melakukan iterasi terhadap semua nodenya, dan dibandingkan dengan nilai dari anak node tersebut. Ketika nilai error dari node tersebut lebih kecil dari nilai error anaknya, maka anak dari node tersebut akan di prune."
    ]
   },
   {
