--- a/Bagian D/Experiment_Template.ipynb
+++ b/Bagian D/Experiment_Template.ipynb
@@ -10,7 +10,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "%matplotlib inline"
    ]
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +183,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>5.1</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
@@ -192,7 +191,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>4.9</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
@@ -200,7 +199,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>4.7</td>\n",
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
@@ -208,7 +207,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4.6</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
@@ -216,7 +215,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5.0</td>\n",
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
@@ -236,7 +235,7 @@
        "4           5.0           3.6            1.4           0.2   setosa"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from clf.mlp import MyMlp\n",
-    "from clf.utils import read_csv, oneHotEncoder, scale_data\n"
+    "from clf.utils import read_csv, scale_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -330,41 +329,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "myclf = MyMlp(input_layer, hidden_layer, output_layer)"
+    "myclf = MyMlp(input_layer, hidden_layer, output_layer, epochs=2500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_encoded = oneHotEncoder(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0... Epoch 1... Epoch 2... Epoch 3... Epoch 4... Epoch 5... Epoch 6... Epoch 7... Epoch 8... Epoch 9... Epoch 10... Epoch 11... Epoch 12... Epoch 13... Epoch 14... Epoch 15... Epoch 16... Epoch 17... Epoch 18... Epoch 19... Epoch 20... Epoch 21... Epoch 22... Epoch 23... Epoch 24... Epoch 25... Epoch 26... Epoch 27... Epoch 28... Epoch 29... Epoch 30... Epoch 31... Epoch 32... Epoch 33... Epoch 34... Epoch 35... Epoch 36... Epoch 37... Epoch 38... Epoch 39... Epoch 40... Epoch 41... Epoch 42... Epoch 43... Epoch 44... Epoch 45... Epoch 46... Epoch 47... Epoch 48... Epoch 49... Epoch 50... Epoch 51... Epoch 52... Epoch 53... Epoch 54... Epoch 55... Epoch 56... Epoch 57... Epoch 58... Epoch 59... Epoch 60... Epoch 61... Epoch 62... Epoch 63... Epoch 64... Epoch 65... Epoch 66... Epoch 67... Epoch 68... Epoch 69... Epoch 70... Epoch 71... Epoch 72... Epoch 73... Epoch 74... Epoch 75... Epoch 76... Epoch 77... Epoch 78... Epoch 79... Epoch 80... Epoch 81... Epoch 82... Epoch 83... Epoch 84... Epoch 85... Epoch 86... Epoch 87... Epoch 88... Epoch 89... Epoch 90... Epoch 91... Epoch 92... Epoch 93... Epoch 94... Epoch 95... Epoch 96... Epoch 97... Epoch 98... Epoch 99... Epoch 0... Epoch 1... Epoch 2... Epoch 3... Epoch 4... Epoch 5... Epoch 6... Epoch 7... Epoch 8... Epoch 9... Epoch 10... Epoch 11... Epoch 12... Epoch 13... Epoch 14... Epoch 15... Epoch 16... Epoch 17... Epoch 18... Epoch 19... Epoch 20... Epoch 21... Epoch 22... Epoch 23... Epoch 24... Epoch 25... Epoch 26... Epoch 27... Epoch 28... Epoch 29... Epoch 30... Epoch 31... Epoch 32... Epoch 33... Epoch 34... Epoch 35... Epoch 36... Epoch 37... Epoch 38... Epoch 39... Epoch 40... Epoch 41... Epoch 42... Epoch 43... Epoch 44... Epoch 45... Epoch 46... Epoch 47... Epoch 48... Epoch 49... Epoch 50... Epoch 51... Epoch 52... Epoch 53... Epoch 54... Epoch 55... Epoch 56... Epoch 57... Epoch 58... Epoch 59... Epoch 60... Epoch 61... Epoch 62... Epoch 63... Epoch 64... Epoch 65... Epoch 66... Epoch 67... Epoch 68... Epoch 69... Epoch 70... Epoch 71... Epoch 72... Epoch 73... Epoch 74... Epoch 75... Epoch 76... Epoch 77... Epoch 78... Epoch 79... Epoch 80... Epoch 81... Epoch 82... Epoch 83... Epoch 84... Epoch 85... Epoch 86... Epoch 87... Epoch 88... Epoch 89... Epoch 90... Epoch 91... Epoch 92... Epoch 93... Epoch 94... Epoch 95... Epoch 96... Epoch 97... Epoch 98... Epoch 99... Epoch 0... Epoch 1... Epoch 2... Epoch 3... Epoch 4... Epoch 5... Epoch 6... Epoch 7... Epoch 8... Epoch 9... Epoch 10... Epoch 11... Epoch 12... Epoch 13... Epoch 14... Epoch 15... Epoch 16... Epoch 17... Epoch 18... Epoch 19... Epoch 20... Epoch 21... Epoch 22... Epoch 23... Epoch 24... Epoch 25... Epoch 26... Epoch 27... Epoch 28... Epoch 29... Epoch 30... Epoch 31... Epoch 32... Epoch 33... Epoch 34... Epoch 35... Epoch 36... Epoch 37... Epoch 38... Epoch 39... Epoch 40... Epoch 41... Epoch 42... Epoch 43... Epoch 44... Epoch 45... Epoch 46... Epoch 47... Epoch 48... Epoch 49... Epoch 50... Epoch 51... Epoch 52... Epoch 53... Epoch 54... Epoch 55... Epoch 56... Epoch 57... Epoch 58... Epoch 59... Epoch 60... Epoch 61... Epoch 62... Epoch 63... Epoch 64... Epoch 65... Epoch 66... Epoch 67... Epoch 68... Epoch 69... Epoch 70... Epoch 71... Epoch 72... Epoch 73... Epoch 74... Epoch 75... Epoch 76... Epoch 77... Epoch 78... Epoch 79... Epoch 80... Epoch 81... Epoch 82... Epoch 83... Epoch 84... Epoch 85... Epoch 86... Epoch 87... Epoch 88... Epoch 89... Epoch 90... Epoch 91... Epoch 92... Epoch 93... Epoch 94... Epoch 95... Epoch 96... Epoch 97... Epoch 98... Epoch 99... ---------------------------------\n",
-      "<clf.mlp.MyMlp object at 0x7f23ce8ad050>\n",
-      "-----------------------------------\n",
-      "fit_time  mean  1.2557487487792969\n",
-      "fit_time  std  0.11825507848964546\n",
-      "score_time  mean  0.0015027523040771484\n",
-      "score_time  std  0.00014605792770925835\n",
-      "test_score  mean  0.0\n",
-      "test_score  std  0.0\n",
-      "{'fit_time': array([1.19388795, 1.1521194 , 1.4212389 ]), 'score_time': array([0.00130844, 0.00153923, 0.00166059]), 'test_score': array([0., 0., 0.])}\n"
+      "[0.48439518 0.4137771  0.2409445 ]\n",
+      "[0.48439518 0.4137771  0.2409445 ]\n",
+      "[0.48439517 0.41377711 0.24094452]\n",
+      "[0.11237044 0.27862029 0.68128179]\n",
+      "[0.11237044 0.27862029 0.68128179]\n",
+      "[0.11237044 0.27862029 0.68128179]\n",
+      "[0.73579005 0.25780242 0.05802729]\n",
+      "[0.73606992 0.25792291 0.05792918]\n",
+      "[0.70552954 0.24660897 0.06955473]\n"
      ]
     }
    ],
@@ -384,16 +373,16 @@
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "\n",
     "clfs = []\n",
-    "clfs.append(MyMlp(input_layer, hidden_layer, output_layer))\n",
+    "clfs.append(myclf)\n",
     "# clfs.append(SVC())\n",
     "# clfs.append(KNeighborsClassifier(n_neighbors=3))\n",
-    "# # clfs.append(DecisionTreeClassifier())\n",
+    "# clfs.append(DecisionTreeClassifier())\n",
     "# clfs.append(RandomForestClassifier())\n",
     "# clfs.append(GradientBoostingClassifier())\n",
     "\n",
     "for classifier in clfs:\n",
     "    pipeline.set_params(clf = classifier)\n",
-    "    scores = cross_validate(pipeline, x.values,y_encoded,cv=10)\n",
+    "    scores = cross_validate(pipeline, x.values, y.values, cv=5)\n",
     "    print('---------------------------------')\n",
     "    print(str(classifier))\n",
     "    print('-----------------------------------')\n",
@@ -427,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
