--- a/Bagian D/Experiment_Template.ipynb
+++ b/Bagian D/Experiment_Template.ipynb
@@ -138,10 +138,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Banyaknya baris dan kolom (150, 5)\n",
-      "Banyaknya data duplicate 3\n"
-     ]
+     "text": "Banyaknya baris dan kolom (150, 5)\nBanyaknya data duplicate 3\n"
     }
    ],
    "source": [
@@ -155,85 +152,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "      <th>species</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal_length   sepal_width   petal_length   petal_width  species\n",
-       "0           5.1           3.5            1.4           0.2   setosa\n",
-       "1           4.9           3.0            1.4           0.2   setosa\n",
-       "2           4.7           3.2            1.3           0.2   setosa\n",
-       "3           4.6           3.1            1.5           0.2   setosa\n",
-       "4           5.0           3.6            1.4           0.2   setosa"
-      ]
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sepal_length</th>\n      <th>sepal_width</th>\n      <th>petal_length</th>\n      <th>petal_width</th>\n      <th>species</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "   sepal_length   sepal_width   petal_length   petal_width  species\n0           5.1           3.5            1.4           0.2   setosa\n1           4.9           3.0            1.4           0.2   setosa\n2           4.7           3.2            1.3           0.2   setosa\n3           4.6           3.1            1.5           0.2   setosa\n4           5.0           3.6            1.4           0.2   setosa"
      },
      "execution_count": 9,
      "metadata": {},
@@ -269,9 +189,9 @@
     "\n",
     "\n",
     "preprocessor = Pipeline([\n",
-    "#     ('selector', DataFrameSelector(num_attribs)),\n",
+    "    # ('selector', DataFrameSelector(num_attribs)),\n",
     "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
-    "    #('attribs_adder', CombinedAttributesAdder()),\n",
+    "    # ('attribs_adder', CombinedAttributesAdder()),\n",
     "    ('std_scaler', StandardScaler()),\n",
     "  ])\n",
     "\n",
@@ -300,7 +220,9 @@
    "outputs": [],
    "source": [
     "from clf.mlp import MyMlp\n",
-    "from clf.utils import read_csv, scale_data"
+    "from clf.c45 import C45\n",
+    "from clf.utils import read_csv, scale_data\n",
+    "from clf.c45_numeric_handler import process_numeric"
    ]
   },
   {
@@ -311,11 +233,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "[4, 3]\n"
-     ]
+     "text": "4\n3\n[4, 3]\n"
     }
    ],
    "source": [
@@ -333,18 +251,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myclf = MyMlp(input_layer, hidden_layer, output_layer, epochs=2500, learning_rate=0.02)"
+    "myclf = MyMlp(input_layer, hidden_layer, output_layer, epochs=2500, learning_rate=0.02)\n",
+    "myc45 = C45()\n",
+    "myc45.label = list(x.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']]\n---------------------------------\n<clf.c45.C45 object at 0x0000010535429080>\n-----------------------------------\nfit_time  mean  0.012400388717651367\nfit_time  std  0.0023318276698441483\nscore_time  mean  0.0008001327514648438\nscore_time  std  0.0004000684217507532\ntest_score  mean  0.3820689655172414\ntest_score  std  0.3811641221186584\n{'fit_time': array([0.01599956, 0.01299953, 0.01100302, 0.01299977, 0.00900006]), 'score_time': array([0.0010016 , 0.0010016 , 0.00099874, 0.00099874, 0.        ]), 'test_score': array([1.        , 0.6       , 0.        , 0.31034483, 0.        ])}\n"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "pipeline = Pipeline([\n",
-    "    ('processor', preprocessor), #Step1 - preprocess data\n",
+    "    # ('processor', preprocessor), #Step1 - preprocess data\n",
     "    ('clf', LogisticRegression()) #step2 - classifier (default : LogisticRegression )\n",
     "])\n",
     "\n",
@@ -357,7 +283,8 @@
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "\n",
     "clfs = []\n",
-    "clfs.append(myclf)\n",
+    "# clfs.append(myclf)\n",
+    "clfs.append(myc45)\n",
     "# clfs.append(SVC())\n",
     "# clfs.append(KNeighborsClassifier(n_neighbors=3))\n",
     "# clfs.append(DecisionTreeClassifier())\n",
@@ -366,7 +293,9 @@
     "\n",
     "for classifier in clfs:\n",
     "    pipeline.set_params(clf = classifier)\n",
-    "    scores = cross_validate(pipeline, x.values, y.values, cv=5)\n",
+    "    x_temp = process_numeric(np.vectorize(str)(x.values), y.values)\n",
+    "    print(x_temp)\n",
+    "    scores = cross_validate(pipeline, x_temp, y.values, cv=5, scoring='accuracy')\n",
     "    print('---------------------------------')\n",
     "    print(str(classifier))\n",
     "    print('-----------------------------------')\n",
@@ -375,13 +304,6 @@
     "            print(key,' std ', values.std())\n",
     "    print(scores)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -400,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2-final"
   }
  },
  "nbformat": 4,
