save and load change to iris

--- a/Bagian D/save_and_load_model.ipynb
+++ b/Bagian D/save_and_load_model.ipynb
@@ -17,32 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read data\n",
-    "data = read_csv('../Bagian B/datasets/play_tennis.csv')\n",
-    "label = data[0, 1:-1].tolist()\n",
-    "x = data[1:, 1:-1]\n",
-    "target = data[1:, -1:].flatten()"
+    "data = read_csv('../Bagian B/datasets/iris.csv')\n",
+    "label = data[0, 0:-1].tolist()\n",
+    "X = data[1:, 0:-1]\n",
+    "y = data[1:, -1:].flatten()\n",
+    "x_temp = process_numeric(np.vectorize(str)(X), y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train model\n",
     "c45_model = C45()\n",
     "c45_model.label = label\n",
-    "c45_model.fit(x, target)"
+    "c45_model.fit(x_temp, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,13 @@
     "with open(filename, 'wb') as file:\n",
     "    pickle.dump(c45_model, file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,6 +82,47 @@
     "\n",
     "c45_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['day', 'outlook', 'temp', 'humidity', 'wind', 'play'],\n",
+       "       ['D1', 'Sunny', 'Hot', 'High', 'Weak', 'No'],\n",
+       "       ['D2', 'Sunny', 'Hot', 'High', 'Strong', 'No'],\n",
+       "       ['D3', 'Overcast', 'Hot', 'High', 'Weak', 'Yes'],\n",
+       "       ['D4', 'Rain', 'Mild', 'High', 'Weak', 'Yes'],\n",
+       "       ['D5', 'Rain', 'Cool', 'Normal', 'Weak', 'Yes'],\n",
+       "       ['D6', 'Rain', 'Cool', 'Normal', 'Strong', 'No'],\n",
+       "       ['D7', 'Overcast', 'Cool', 'Normal', 'Strong', 'Yes'],\n",
+       "       ['D8', 'Sunny', 'Mild', 'High', 'Weak', 'No'],\n",
+       "       ['D9', 'Sunny', 'Cool', 'Normal', 'Weak', 'Yes'],\n",
+       "       ['D10', 'Rain', 'Mild', 'Normal', 'Weak', 'Yes'],\n",
+       "       ['D11', 'Sunny', 'Mild', 'Normal', 'Strong', 'Yes'],\n",
+       "       ['D12', 'Overcast', 'Mild', 'High', 'Strong', 'Yes'],\n",
+       "       ['D13', 'Overcast', 'Hot', 'Normal', 'Weak', 'Yes'],\n",
+       "       ['D14', 'Rain', 'Mild', 'High', 'Strong', 'No']], dtype='<U8')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
