--- a/Bagian D/save_and_load_model.ipynb
+++ b/Bagian D/save_and_load_model.ipynb
@@ -54,23 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<clf.c45.C45 at 0xa1c9a1908>"
+       "<clf.c45.C45 at 0xa1d0f0cc0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,36 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([['day', 'outlook', 'temp', 'humidity', 'wind', 'play'],\n",
-       "       ['D1', 'Sunny', 'Hot', 'High', 'Weak', 'No'],\n",
-       "       ['D2', 'Sunny', 'Hot', 'High', 'Strong', 'No'],\n",
-       "       ['D3', 'Overcast', 'Hot', 'High', 'Weak', 'Yes'],\n",
-       "       ['D4', 'Rain', 'Mild', 'High', 'Weak', 'Yes'],\n",
-       "       ['D5', 'Rain', 'Cool', 'Normal', 'Weak', 'Yes'],\n",
-       "       ['D6', 'Rain', 'Cool', 'Normal', 'Strong', 'No'],\n",
-       "       ['D7', 'Overcast', 'Cool', 'Normal', 'Strong', 'Yes'],\n",
-       "       ['D8', 'Sunny', 'Mild', 'High', 'Weak', 'No'],\n",
-       "       ['D9', 'Sunny', 'Cool', 'Normal', 'Weak', 'Yes'],\n",
-       "       ['D10', 'Rain', 'Mild', 'Normal', 'Weak', 'Yes'],\n",
-       "       ['D11', 'Sunny', 'Mild', 'Normal', 'Strong', 'Yes'],\n",
-       "       ['D12', 'Overcast', 'Mild', 'High', 'Strong', 'Yes'],\n",
-       "       ['D13', 'Overcast', 'Hot', 'Normal', 'Weak', 'Yes'],\n",
-       "       ['D14', 'Rain', 'Mild', 'High', 'Strong', 'No']], dtype='<U8')"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "data"
+    "# myMLP\n",
+    "input_layer = len(x_temp[0])\n",
+    "print(input_layer)\n",
+    "output_layer = len(set(y))\n",
+    "print(output_layer)\n",
+    "hidden_layer = [4,3]\n",
+    "print(hidden_layer)"
    ]
   },
   {
@@ -122,7 +105,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mlp_model = MyMlp(input_layer, hidden_layer, output_layer, epochs=1000, learning_rate=0.5)\n",
+    "mlp_model.fit(x_temp, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "mlp_model_filename = \"MLP_Model.pkl\"\n",
+    "with open(mlp_model_filename, 'wb') as file:\n",
+    "    pickle.dump(mlp_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "with open(mlp_model_filename, 'rb') as file:  \n",
+    "    mlp_model = pickle.load(file)\n",
+    "\n",
+    "mlp_model"
+   ]
   }
  ],
  "metadata": {
