Finished part 1,2,3 of experiment

--- a/Bagian D/Bagian 1.ipynb
+++ b/Bagian D/Bagian 1.ipynb
@@ -47,6 +47,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to Extract Input and Output\n",
+    "\n",
+    "def extract_feature_target(data, output):\n",
+    "    y = data[output]\n",
+    "    x = data.drop(output, axis=1)\n",
+    "    #print(x.columns) #optional\n",
+    "    #print(y.head()) #optional\n",
+    "    return x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
@@ -241,6 +257,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_temp = process_numeric(np.vectorize(str)(x), y)\n",
+    "x_train, x_test, y_train, y_test = train_test_data(x_temp, y, _test_size=0.1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,6 +306,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_temp = process_numeric(np.vectorize(str)(x), y)\n",
+    "x_train, x_test, y_train, y_test = train_test_data(x_temp, y, _test_size=0.1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -310,7 +346,7 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -335,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -360,7 +398,7 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -379,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -649,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
