--- a/Bagian D/bagian 2 k-fold.ipynb
+++ b/Bagian D/bagian 2 k-fold.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Tugas Besar 1 - Bagian D \n",
     "\n",
@@ -17,16 +15,14 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## I. Import Library Standar dan Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +58,14 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## II. Mendefinisikan Fungsi Bantuan "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,54 +135,54 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Bagian 1 : Eksperimen Skema Hold-out Validation"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 1.1 Pembelajaran DTL"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 1.2 Pembelajaran ANN"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Bagian 2 : Eksperimen Skema 10-fold Cross Validation"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 2.1 Pembelajaran DTL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Import Berhasil\n",
+      "Banyaknya baris dan kolom (150, 5)\n",
+      "Banyaknya data duplicate 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Import things\n",
     "from sklearn.model_selection import cross_validate\n",
@@ -212,29 +206,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fit_time  mean  0.011305618286132812\n",
+      "fit_time  std  0.009264624331516234\n",
+      "score_time  mean  0.0004199504852294922\n",
+      "score_time  std  0.00013813245758808942\n",
+      "test_score  mean  0.36\n",
+      "test_score  std  0.4363484845854286\n",
+      "==================================\n",
+      "Hasil untuk setiap fold\n",
+      "Fold-1: 100%\n",
+      "Fold-2: 100%\n",
+      "Fold-3: 100%\n",
+      "Fold-4: 20%\n",
+      "Fold-5: 0%\n",
+      "Fold-6: 0%\n",
+      "Fold-7: 40%\n",
+      "Fold-8: 0%\n",
+      "Fold-9: 0%\n",
+      "Fold-10: 0%\n"
+     ]
+    }
+   ],
    "source": [
     "dtl_cross_validate = cross_validate(pipeline, x_temp, y.values, cv=10, scoring='accuracy')\n",
     "\n",
     "for key, values in dtl_cross_validate.items():\n",
     "        print(key,' mean ', values.mean())\n",
-    "        print(key,' std ', values.std())"
+    "        print(key,' std ', values.std())\n",
+    "print(\"==================================\")\n",
+    "print(\"Hasil untuk setiap fold\")\n",
+    "\n",
+    "i=1\n",
+    "for score in dtl_cross_validate[\"test_score\"] :\n",
+    "    print(\"Fold-{foldnum}: {acc}%\".format(foldnum=i, acc=int(score*100)) )\n",
+    "    i = i+1"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 2.2 Pembelajaran ANN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,58 +272,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gardahadi/Devspace/Semester_6/ML/tubes-1-ml/Bagian D/clf/utils.py:22: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1.0 / (1.0 + np.exp(-x))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fit_time  mean  12.416111159324647\n",
+      "fit_time  std  0.3127191698493075\n",
+      "score_time  mean  0.0006960391998291016\n",
+      "score_time  std  0.00011347528202265745\n",
+      "test_score  mean  0.33333333333333337\n",
+      "test_score  std  0.42998707990925605\n",
+      "==================================\n",
+      "Hasil untuk setiap fold\n",
+      "Fold-1: 0%\n",
+      "Fold-2: 0%\n",
+      "Fold-3: 0%\n",
+      "Fold-4: 100%\n",
+      "Fold-5: 93%\n",
+      "Fold-6: 93%\n",
+      "Fold-7: 46%\n",
+      "Fold-8: 0%\n",
+      "Fold-9: 0%\n",
+      "Fold-10: 0%\n"
+     ]
+    }
+   ],
    "source": [
     "ann_cross_validate = cross_validate(pipeline, x.values, y.values, cv=10, scoring='accuracy')\n",
     "\n",
     "for key, values in ann_cross_validate.items():\n",
     "        print(key,' mean ', values.mean())\n",
-    "        print(key,' std ', values.std())"
+    "        print(key,' std ', values.std())\n",
+    "print(\"==================================\")\n",
+    "print(\"Hasil untuk setiap fold\")\n",
+    "\n",
+    "i=1\n",
+    "for score in ann_cross_validate[\"test_score\"] :\n",
+    "    print(\"Fold-{foldnum}: {acc}%\".format(foldnum=i, acc=int(score*100)) )\n",
+    "    i = i+1"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Bagian 3 : Penyimpanan dan Pemanggilan Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 3.1 Menyimpan Model dalam file .txt"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 3.2 Memanggil Model "
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Bagian 4 : Analisis Eksperimen Bagian 1 & 2"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Test"
    ]
@@ -366,9 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Machine Learning Pipeline"
    ]
@@ -457,9 +509,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.7.2 64-bit",
+   "display_name": "Python 3.7.4 64-bit",
    "language": "python",
-   "name": "python37264bit0c9ce3831b1c4d0782eb0dd4d688b280"
+   "name": "python37464bit59d41560313345188f281fa0a011ab24"
   },
   "language_info": {
    "codemirror_mode": {
@@ -471,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
