--- a/Bagian D/Tubes1D_13517015.ipynb
+++ b/Bagian D/Tubes1D_13517015.ipynb
@@ -1163,6 +1163,62 @@
    "source": [
     "# Bagian 4 : Analisis Eksperimen Bagian 1 & 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Analisis Hasil eksperimen 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Akurasi C45 lebih rendah dibanding akurasi MLP pada perbandingan 9:1 untuk data training dan testing dengan random_state = 100\n",
+    "\n",
+    "- Pada algoritma C45, target \"Virginica\" selalu diklasifikasikan sebagai \"Versicolor\" padahal perbandingan jumlah kelas seimbang. Kami duga hal ini disebabkan karena proses diskritisasi dari variabel kontinu hanya dilakukan di awal training, bukan pada tiap iterasi dalam membut cabang\n",
+    "\n",
+    "- MLP sangat sensitif terhadap inisialisasi bobot pada percobaan ini, setelah 3 kali percobaan dengan keadaan sama baru didapatkan nilai akurasi diatas 0.33 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Analisis Hasil Eksperimen 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Hasil percobaan k-fold validation dengan nilai k = 10 menghasilkan akurasi yang kurang lebih sama untuk setiap model. Dengan menggunakan model DTL menghasilkan akurasi kurang lebih 0.36 dan dengan menggunakan ANN menghasilkan akurasi kurang lebih 0.33\n",
+    "- Model DTL menghasilkan lebih banyak nilai 100% dibandingkan dengan model ANN.  Implikasi dari hal ini adalah model DTL kami lebih baik dibandingkan model ANN untuk dataset ini, karena model DTL lebih robust terhadap data inisialisasi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Analisis Perbandingan Hasil Eksperimen 1 & 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Nilai akurasi untuk myC45 menggunakan skema hold-out validation dan 10-fold cross-validation kurang lebih sama yaitu sekitar 38%\n",
+    "- Nilai akurasi untuk myMLP menggunakan skema hold-out validation dan 10-fold cross-validation jauh berbeda yaitu 100% dan 33%\n",
+    "- Poin nomor 2 menunjukan bahwa pada kasus dataset ini. Vlidasi menggunakan K-Fold Cross validation lebih baik digunakan karena hasilnya lebih representatif terhadap kinerja model sebenarnya"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
